--- a/index.html
+++ b/index.html
@@ -124,11 +124,11 @@
           </div>
           <div class="legend-item">
             <span class="legend-color manzanas-sel-color"></span>
-            <span class="legend-label">Manzanas dentro de la colonia seleccionada</span>
+            <span class="legend-label">Manzanas dentro de la colonia seleccionada (coloreadas por prioridad)</span>
           </div>
         </div>
 
-        <div class="legend-subtitle">Prioridad de intervención</div>
+        <div class="legend-subtitle">Prioridad de intervención (por manzana)</div>
         <div class="legend-group">
           <div class="legend-item"><span class="legend-color prio-muy-baja"></span>Muy baja</div>
           <div class="legend-item"><span class="legend-color prio-baja"></span>Baja</div>
@@ -144,7 +144,7 @@
   <section class="table-section section-block">
     <h3>Colonias – Manzanas verdes y superficie</h3>
     <p class="hint">
-      Usa los filtros en los encabezados para buscar por alcaldía, colonia y prioridad de intervención.
+      Usa los filtros en los encabezados para buscar por alcaldía, colonia y prioridad de intervención (a nivel colonia).
       Haz clic en el título de cada columna para ordenar los datos (↕ indica columna ordenable).
     </p>
 
@@ -163,7 +163,7 @@
             <th data-col="alc"  title="Haz clic para ordenar">Alcaldía ↕</th>
             <th data-col="col"  title="Haz clic para ordenar">Colonia ↕</th>
             <th data-col="manz" title="Haz clic para ordenar">No. de manzanas ↕</th>
-            <th data-col="prio" title="Haz clic para ordenar">Prioridad de intervención (Manzanas Verdes) ↕</th>
+            <th data-col="prio" title="Haz clic para ordenar">Prioridad (colonia) ↕</th>
             <th data-col="pob"  title="Haz clic para ordenar">Población 2020 ↕</th>
             <th data-col="ha"   title="Haz clic para ordenar">Superficie ha ↕</th>
           </tr>
@@ -180,7 +180,7 @@
             </th>
             <!-- No. de manzanas: sin filtro -->
             <th></th>
-            <!-- Prioridad: select -->
+            <!-- Prioridad colonia: select -->
             <th>
               <select id="filtroPrio">
                 <option value="">Todas</option>
@@ -206,7 +206,7 @@
   <section class="analysis-section section-block">
     <h3>Distribución por prioridad de intervención</h3>
     <p class="hint">
-      Las gráficas muestran la distribución de colonias y población por nivel de prioridad de intervención,
+      Las gráficas muestran la distribución de colonias y población por nivel de prioridad,
       de acuerdo con los filtros aplicados en la tabla de colonias.
     </p>
 
@@ -343,17 +343,18 @@ function initMap() {
 
   baseOSM.addTo(map);
 
-  // Manzanas base
+  // Manzanas base (todas en gris claro)
   capaManzanasTodas = L.geoJSON(null, {
     pane: 'overlayPane',
     style: {
       color: "#888888",
       weight: 0.3,
       fillColor: "#c0c0c0",
-      fillOpacity: 0.4
+      fillOpacity: 0.25
     }
   }).addTo(map);
 
+  // Colonias (solo contorno)
   capaColonias = L.geoJSON(null, {
     pane: 'overlayPane',
     style: {
@@ -368,13 +369,33 @@ function initMap() {
     }
   }).addTo(map);
 
+  // Manzanas resaltadas por prioridad (dentro de colonia seleccionada)
   capaManzanasResaltadas = L.geoJSON(null, {
     pane: 'overlayPane',
-    style: {
-      color:"#555555",
-      weight:0.8,
-      fillColor:"#777777",
-      fillOpacity:0.55
+    style: function(feature) {
+      const p = feature.properties || {};
+      const s = estiloPrioridad(p.GM_2020);
+      return {
+        color: "#555555",
+        weight: 0.6,
+        fillColor: s.fill,
+        fillOpacity: 0.7
+      };
+    },
+    onEachFeature: function(feat, layer) {
+      const p = feat.properties || {};
+      const alc = p.NOM_MUN || p.ALCALDIA || "";
+      const col = p.COLONIA || "";
+      const pr  = p.GM_2020 || "Sin dato";
+      const pob = p.POBTOT;
+
+      let popup = `<b>${normalizarTexto(col)}</b><br>`;
+      if (alc) popup += `Alcaldía: ${normalizarTexto(alc)}<br>`;
+      popup += `Prioridad (manzana): ${pr}<br>`;
+      if (pob != null) {
+        popup += `Población (manzana): ${Number(pob).toLocaleString("es-MX")} hab.`;
+      }
+      layer.bindPopup(popup);
     }
   }).addTo(map);
 
@@ -412,7 +433,7 @@ function cargarCapasEnMapa() {
 }
 
 // =======================
-// DATOS TABLA + KPI GLOBAL
+// DATOS TABLA + KPI GLOBAL (a nivel colonia, usando PRIORIDAD_)
 // =======================
 
 function construirDatosTabla() {
@@ -470,7 +491,7 @@ function poblarSelectFiltrosTabla() {
 }
 
 // =======================
-// KPIs + GRÁFICAS + RESUMEN
+// KPIs + GRÁFICAS + RESUMEN (a nivel colonia)
 // =======================
 
 function actualizarKPIsyCharts(filas) {
@@ -495,7 +516,7 @@ function actualizarKPIsyCharts(filas) {
     porPrioHa[pr]  = (porPrioHa[pr]  || 0) + (r.ha  || 0);
   });
 
-  // KPIs globales basados en totales de ciudad (no filtros)
+  // KPIs globales (ciudad completa)
   const totalAltaMuyAlta   = globalAltaMuyAltaColonias;
   const pobAltaMuyAlta     = globalAltaMuyAltaPob;
   const haAltaMuyAlta      = globalAltaMuyAltaHa;
@@ -566,7 +587,7 @@ function actualizarKPIsyCharts(filas) {
           title: { display: true, text: 'Colonias' }
         },
         x: {
-          title: { display: true, text: 'Prioridad' }
+          title: { display: true, text: 'Prioridad (colonia)' }
         }
       }
     }
@@ -614,7 +635,7 @@ function actualizarKPIsyCharts(filas) {
                   pr === "baja"     ? "stats-baja" :
                   pr === "muy baja" ? "stats-muy-baja" : "";
 
-      html += `<div class="stats-card ${cls}"> 
+      html += `<div class="stats-card ${cls}">
         <h5>${label}</h5>
         <p><strong>Colonias:</strong> ${n.toLocaleString("es-MX")} (${perc}%)</p>
         <p><strong>Población:</strong> ${pob.toLocaleString("es-MX")} hab.</p>
@@ -732,10 +753,10 @@ function resaltarFilaTabla(idx) {
 }
 
 // =======================
-// MAPA: RESALTAR COLONIA
+// MAPA: RESALTAR COLONIA Y MANZANAS
 // =======================
 
-function resaltarColoniaYManzanas(alcRaw, colRaw, prioridadRaw, numManzRaw, idxFilaTabla) {
+function resaltarColoniaYManzanas(alcRaw, colRaw, prioridadColonia, numManzCol, idxFilaTabla) {
   showMapLoading(true);
 
   setTimeout(() => {
@@ -753,18 +774,18 @@ function resaltarColoniaYManzanas(alcRaw, colRaw, prioridadRaw, numManzRaw, idxF
     capaColonias.resetStyle();
     capaColonias.eachLayer(l => l.unbindTooltip());
 
-    const est = estiloPrioridad(prioridadRaw);
-    const prio = (prioridadRaw || "Sin dato").trim();
-    const num = numManzRaw != null ? numManzRaw : 0;
+    const estCol = estiloPrioridad(prioridadColonia);
+    const prioCol = (prioridadColonia || "Sin dato").trim();
+    const numColMz = numManzCol != null ? numManzCol : 0;
 
     layerColonia.setStyle({
-      color: est.color,
+      color: estCol.color,
       weight: 3,
-      fillColor: est.fill,
-      fillOpacity: 0.2
+      fillColor: estCol.fill,
+      fillOpacity: 0.15
     });
 
-    // Datos para tooltip (población y superficie con separador miles)
+    // Tooltip de colonia (usa prioridad colonia y agregados)
     let pobTxt = "";
     let haTxt  = "";
     if (typeof idxFilaTabla === "number" && idxFilaTabla >= 0 && idxFilaTabla < tablaDatosColonias.length) {
@@ -775,11 +796,11 @@ function resaltarColoniaYManzanas(alcRaw, colRaw, prioridadRaw, numManzRaw, idxF
 
     layerColonia.bindTooltip(
       `<b>${normalizarTexto(col)}</b><br>` +
-      `Prioridad: ${prio}<br>` +
-      `Manzanas: ${num.toLocaleString("es-MX")}<br>` +
+      `Prioridad (colonia): ${prioCol}<br>` +
+      `Manzanas (colonia): ${numColMz.toLocaleString("es-MX")}<br>` +
       (pobTxt ? `Población: ${pobTxt} hab.<br>` : "") +
       (haTxt  ? `Superficie: ${haTxt} ha` : "" ),
-      { permanent: true, direction: 'center', className: `tooltip-prioridad ${prioridadClass(prio)}` }
+      { permanent: true, direction: 'center', className: `tooltip-prioridad ${prioridadClass(prioCol)}` }
     ).openTooltip();
 
     const gCol = layerColonia.toGeoJSON();
@@ -801,6 +822,7 @@ function resaltarColoniaYManzanas(alcRaw, colRaw, prioridadRaw, numManzRaw, idxF
       }
     });
 
+    // Manzanas que intersectan la colonia (cada una con su propia prioridad GM_2020)
     const seleccionadas = candidatas.filter(f => {
       try {
         return turf.booleanIntersects(f, gCol);
@@ -926,18 +948,21 @@ document.addEventListener('DOMContentLoaded', () => {
 
     const alc       = p.ALCALDIA || "";
     const col       = p.COLONIA || "";
-    const prioridad = p.PRIORIDAD_ || "Sin dato";
+    const prioridad = p.PRIORIDAD_ || "Sin dato"; // prioridad colonia (para KPIs/tooltip de colonia)
     const numManz   = p.NO_DE_MZNA != null ? p.NO_DE_MZNA : 0;
 
     const kpiHtml =
       `<div class="kpi-card">
         <p><span class="label-bold">Alcaldía:</span> ${normalizarTexto(alc)}</p>
         <p><span class="label-bold">Colonia:</span> ${normalizarTexto(col)}</p>
-        <p><span class="label-bold">Prioridad de intervención (Manzanas Verdes):</span>
+        <p><span class="label-bold">Prioridad de intervención (colonia):</span>
            <span class="badge-prioridad ${prioridadClass(prioridad)}">${prioridad}</span></p>
         <p class="kpi-number-line">
-           <span class="label-bold">No. de manzanas dentro de la colonia:</span>
+           <span class="label-bold">No. de manzanas dentro de la colonia (total):</span>
            <span class="kpi-value">${numManz.toLocaleString("es-MX")}</span>
+        </p>
+        <p class="kpi-secondary">
+          En el mapa, cada manzana se muestra con el color de su propia prioridad.
         </p>
       </div>`;
 
